[package]
name = "bouncer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = [ "full" ] }
argh = "0.1"
webpki-roots = "0.22"
tokio-rustls = "0.23.4"
inquire = { version = "0.3.0", features = ["chrono", "console", "date", "editor", "tempfile"] }
clap = { version = "3.2.21", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
